--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc --init",
     "start": "node ./dist",
-    "build": "tsc --project ."
+    "build": "tsc --project .",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.15",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "express": "^4.17.2"
   }
 }
